<resources>
    <string name="app_name">Pokedex</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="pokemon_name_placeholder">Pokemon Name</string>
    <string name="pokemon_sprite">Pokemon Sprite</string>
    <string name="settings">Settings</string>
    <string name="font_preference_dialog_title">Change pokémon name font</string>
    <string name="font_preference_title">Choose font</string>
    <string name="font_preference_default_value">normal</string>
    <string name="username_preference_summary">Enter your trainer name used for greetings</string>
    <string name="username_preference_username">Trainer name</string>
    <string name="username_preference_default_value">Ash</string>
    <string name="pokedex_logo_content_description">Pokedex Logo</string>
    <string name="placeholder">Pokemon Details Placeholder</string>
    <string name="favorites_logo_description">Favorites</string>
    <string name="pokemon_number_placeholder">No. 000</string>
    <string name="pokemon_background_content_description">pokemon background</string>
    <string name="pokemon_image_content_description">Pokemon Image</string>
    <string name="back_arrow_content_description">Back arrow</string>
    <string name="favorite_icon_content_description">Favorite Icon</string>
    <string name="type_placeholder">none</string>
    <string name="pokemon_stat_hp">HP</string>
    <string name="pokemon_stat_attack">Attack</string>
    <string name="pokemon_stat_defense">Defense</string>
    <string name="pokemon_label_spattack">Sp. Attack</string>
    <string name="pokemon_stat_spdefense">Sp. Defense</string>
    <string name="pokemon_stat_speed">Speed</string>
    <string name="stat_placeholder">000</string>
    <string name="pokemon_stat_weight">Weight</string>
    <string name="pokemon_stat_height">Height</string>
    <string name="pokemon_details_base_stats">Base Stats</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="edit_enter_pokemon_name">Enter Pokemon name</string>
    <string name="enter_new_name_hint">Enter new name</string>
    <string name="delete_icon">delete icon</string>
    <string name="pokemon_type_normal_hexstring">#AAAA99</string>
    <string name="pokemon_type_fire_hexstring">#FF4422</string>
    <string name="pokemon_type_water_hexstring">#3399FF</string>
    <string name="pokemon_type_electric_hexstring">#FFCC33</string>
    <string name="pokemon_type_grass_hexstring">#77CC55</string>
    <string name="pokemon_type_ice_hexstring">#66CCFF</string>
    <string name="pokemon_type_fighting_hexstring">#BB5544</string>
    <string name="pokemon_type_poison_hexstring">#AA5599</string>
    <string name="pokemon_type_ground_hexstring">#DDBB55</string>
    <string name="pokemon_type_flying_hexstring">#8899FF</string>
    <string name="pokemon_type_psychic_hexstring">#FF5599</string>
    <string name="pokemon_type_bug_hexstring">#AABB22</string>
    <string name="pokemon_type_rock_hexstring">#BBAA66</string>
    <string name="pokemon_type_ghost_hexstring">#6666BB</string>
    <string name="pokemon_type_dragon_hexstring">#7766EE</string>
    <string name="pokemon_type_dark_hexstring">#775544</string>
    <string name="pokemon_type_steel_hexstring">#AAAABB</string>
    <string name="pokemon_type_fairy_hexstring">#EE99EE</string>
    <string name="pokemon_type_unkown_colorstring">#000000</string>
    <string name="splash_screen_placeholder">Welcome,</string>
    <string name="pokemon_trainer">Pokemon Trainer!</string>
    <string name="loading">Loading…</string>
</resources>
