<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/pokemon_background_content_description"
        android:scaleType="fitXY"
        android:src="@drawable/pokemon_default_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pokemon_details_imageview"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="@string/pokemon_image_content_description"
        android:paddingTop="50dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/pokemon_001"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:onClick="backButtonOnClick"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:icon="@drawable/ic_arrow_back"
        app:iconGravity="start"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/favorite_icon_content_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_favorite_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/edit_icon"
        android:onClick="editBackgroundClick"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/pokemon_details_background"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pokemon_details_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_name_placeholder"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/edit_icon"
                android:onClick="editNameClick"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/pokemon_details_name_textview"
                app:layout_constraintStart_toEndOf="@+id/pokemon_details_name_textview"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pokemon_details_number_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_number_placeholder"
                app:layout_constraintEnd_toEndOf="@+id/pokemon_details_name_textview"
                app:layout_constraintStart_toStartOf="@+id/pokemon_details_name_textview"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_name_textview" />

            <TextView
                android:id="@+id/pokemon_details_type1_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/type_background"
                android:padding="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/type_placeholder"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/pokemon_details_type2_textview"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_number_textview" />

            <TextView
                android:id="@+id/pokemon_details_type2_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/type_background"
                android:padding="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/type_placeholder"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/pokemon_details_type1_textview"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_number_textview" />

            <TextView
                android:id="@+id/pokemon_details_weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/stat_placeholder"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/pokemon_details_height_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_type1_textview" />

            <TextView
                android:id="@+id/pokemon_details_height_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/stat_placeholder"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/pokemon_details_weight_label"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_type2_textview" />

            <TextView
                android:id="@+id/pokemon_details_weight_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_stat_weight"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/pokemon_details_weight_label"
                app:layout_constraintStart_toStartOf="@+id/pokemon_details_weight_label"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_weight_label" />

            <TextView
                android:id="@+id/pokemon_details_height_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_stat_height"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/pokemon_details_height_label"
                app:layout_constraintStart_toStartOf="@+id/pokemon_details_height_label"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_height_label" />

            <TextView
                android:id="@+id/pokemon_details_base_stats_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pokemon_details_base_stats"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_height_textview" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@+id/materialCardView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_base_stats_label">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/pokemon_stat_label_hp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_stat_hp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/pokemon_stat_label_attack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_stat_attack"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pokemon_stat_label_hp" />

                    <TextView
                        android:id="@+id/pokemon_stat_label_defense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_stat_defense"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pokemon_stat_label_attack" />


                    <TextView
                        android:id="@+id/pokemon_stat_label_spattack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_label_spattack"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pokemon_stat_label_defense" />

                    <TextView
                        android:id="@+id/pokemon_stat_label_spdefense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_stat_spdefense"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pokemon_stat_label_spattack" />

                    <TextView
                        android:id="@+id/pokemon_stat_label_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_stat_speed"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pokemon_stat_label_spdefense" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialCardView2"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_details_base_stats_label">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/pokemon_stat_hp_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stat_placeholder"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/pokemon_stat_attack_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stat_placeholder"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pokemon_stat_hp_textview" />


                    <TextView
                        android:id="@+id/pokemon_stat_defense_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stat_placeholder"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pokemon_stat_attack_textview" />


                    <TextView
                        android:id="@+id/pokemon_stat_spattack_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stat_placeholder"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pokemon_stat_defense_textview" />


                    <TextView
                        android:id="@+id/pokemon_stat_spdefense_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stat_placeholder"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pokemon_stat_spattack_textview" />

                    <TextView
                        android:id="@+id/pokemon_stat_speed_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stat_placeholder"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pokemon_stat_spdefense_textview" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
